<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.activity.dji.ConnectDroneActivity">
    <TextView
        android:id="@+id/tv_name_aircraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Name: ..."
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_below="@id/tv_name_aircraft"
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Status: No Product Connected"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_connection_status"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/product_information"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <!--Make this default focus so edittext won't be the focus-->
    <TextView
        android:id="@+id/tv_model_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_product_info"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/model_not_available"
        android:textColor="@color/gray"
        android:textSize="15dp"/>
    <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
    to prevent the text_model_available from receiving focus again -->
    <EditText
        android:id="@+id/edt_bridge_ip"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/tv_model_available"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:nextFocusUp="@id/edt_bridge_ip"
        android:nextFocusLeft="@id/edt_bridge_ip"
        android:maxLength="15"
        android:hint="WSBridge IP"
        android:textAllCaps="false"
        android:maxLines="1"
        android:digits="0123456789.\n"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:textColor="@color/black"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/btn_open_fun"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@+id/edt_bridge_ip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_btn"
        android:text="Kết nối"
        android:textAllCaps="false"
        android:textColor="@color/common_text_color"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_open_fun"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sdk_version"
        android:textColor="@color/gray"
        android:textSize="15dp"/>
    <Button
        android:id="@+id/btn_wpm"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@+id/tv_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_btn"
        android:text="WPM"
        android:textColor="@color/common_text_color"
        android:textSize="15dp"/>
    <Button
        android:id="@+id/btn_demo_1"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/btn_wpm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_btn"
        android:text="Demo"
        android:textColor="@color/common_text_color"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/btn_demo_2"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/btn_wpm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_btn"
        android:text="List Features"
        android:textAllCaps="false"
        android:textColor="@color/common_text_color"
        android:textSize="15dp"/>
</RelativeLayout>